src/style.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
}

.game-space {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.game-boards {
    display: flex;
    padding: 10px;
}

.game-board {
    display: grid;
    grid-template-columns: repeat(10, 40px);
    grid-gap: 4px;
    margin-left: 25px;
    margin-right: 25px;
}

#player-pieces {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.game-pieces p {
    padding: 0;
    margin-bottom: 8px;
}

.game-piece {
    display: flex;
}

.player-piece {
    justify-content: flex-end;
}

.dummy-cell {
    width: 40px;
    height: 40px;
    border: 1px solid #ccc;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 12px;
    font-weight: bold;
    cursor: pointer;
}

.cell {
    width: 40px;
    height: 40px;
    border: 1px solid #ccc;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 12px;
    font-weight: bold;
    cursor: pointer;
}

.cell:hover {
    border: 1px dashed black;
}

/* Empty cell style */
.empty {
    background-color: #fff;
}

/* Cell with a ship style */
.ship {
    background-color: #555; /* Dark gray */
    color: #fff; /* White text */
}

/* Cell with a miss style */
.miss {
    background-color: #3498db; /* Blue */
    color: #fff; /* White text */
}

/* Cell with a hit style */
.hit {
    background-color: #555; /* Dark gray */
    color: #fff; /* White text */
    outline: 2px solid #e74c3c; /* Red outline */
}

#new-game-button {
    margin-top: 10px;
    padding: 10px;
    font-size: 16px;
    cursor: pointer;
}
/*
.message-box {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 25%;
    height: 100px;
    background-color: #f1f1f1;
    margin-top: 20px;
    border: 1px solid #ccc;
}
*/

.placement-preview-valid {
    background-color: lightgreen;
}

.placement-preview-invalid {
    background-color: lightcoral;
}

.message-box {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 25%;
    height: 150px;
    background-color: #1f1f1f; /* Dark background */
    margin-top: 20px;
    border: 2px solid #ccc;
    border-radius: 10px; /* Rounded corners */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow effect */
    font-family: 'Courier New', monospace; /* Monospace font */
    color: #00ff00; /* Green text */
    letter-spacing: 2px; /* Spacing between letters */
  }
  
  #message-text {
    padding: 10px; /* Padding inside the box */
  }

